<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoprincipal">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:src="@drawable/secondary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="@color/colorAccent"
                    app:passwordToggleTint="@color/colorAccent"
                    app:hintTextAppearance="@style/TextLabel"
                    android:padding="5dp">
                    <EditText
                        android:id="@+id/etEmail"
                        style="@style/textNormalStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/textUsuario"
                        android:textSize="14sp"
                        android:imeOptions="actionUnspecified"
                        android:background="@color/transparent"
                        android:inputType="text"
                        android:paddingTop="10dp"
                        android:paddingBottom="3dp"
                        android:textAlignment="center"
                        android:layout_centerInParent="true"
                        android:ellipsize="start"
                        android:gravity="center_horizontal" />
                </android.support.design.widget.TextInputLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorAccent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="@color/colorAccent"
                    app:passwordToggleTint="@color/colorAccent"
                    app:hintTextAppearance="@style/TextLabel"
                    android:padding="5dp"
                    android:gravity="center_horizontal"
                    app:passwordToggleEnabled="false">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etPass"
                        style="@style/textNormalStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/textPass"
                        android:textColor="@color/colorAccent"
                        android:background="@color/transparent"
                        android:textSize="14sp"
                        android:paddingTop="10dp"
                        android:paddingBottom="3dp"
                        android:imeActionLabel="@string/textSeccion"
                        android:textAlignment="center"
                        android:gravity="center_horizontal"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:textStyle="bold|normal"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorAccent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/cbRecordar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:buttonTint="@color/colorPrimary"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:text="Recordar usuario"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_style"
                    android:textColor="@color/white"
                    android:text="@string/textIngresar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tvOlvido"
                    style="@style/textCentradoStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password_text"
                    android:layout_margin="5dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="14dp"/>

                <TextView
                    android:id="@+id/tvRegistrar"
                    style="@style/textCentradoStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_text"
                    android:layout_margin="5dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="14dp"/>

            </LinearLayout>
            


        </LinearLayout>


    </android.support.v7.widget.LinearLayoutCompat>

</android.support.constraint.ConstraintLayout>