<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoprincipal"
    android:id="@+id/clReserva">

    <android.support.v7.widget.LinearLayoutCompat
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:id="@+id/aa"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    app:titleTextAppearance="@style/Toolbar.TitleText"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/white"
                    app:title="VALIDAR"
                    app:navigationIcon="?homeAsUpIndicator"
                    app:popupTheme="@style/AppTheme.PopupOverlay" >

                    <ImageView
                        android:src="@drawable/secondary"
                        android:layout_width="130dp"
                        android:layout_height="60dp"
                        android:layout_gravity="end"
                        android:layout_marginEnd="30dp"
                        />
                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.AppBarLayout>

        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/llCabezera"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/menu"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="DETALLE INCIDENCIA"
                    android:textColor="@color/white"
                    android:textStyle="bold|normal"
                    android:textSize="18dp"
                    android:textAlignment="center"
                    android:layout_margin="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llFoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="50dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/cvFoto"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/maps"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llCuerpo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_below="@+id/llFoto">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:background="@drawable/card"
                            android:layout_marginStart="30dp"
                            android:layout_marginEnd="30dp"
                            android:padding="15dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/colorPrimary"
                                    android:text="@string/v_fecha"/>
                                <TextView
                                    android:id="@+id/tvFecha"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="6dp"/>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/colorPrimary"
                                    android:text="@string/v_usuario"/>
                                <TextView
                                    android:id="@+id/tvUsuario"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="6dp"/>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/colorPrimary"
                                    android:text="@string/v_descripcion"/>
                                <TextView
                                    android:id="@+id/tvDescripcion"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="6dp"/>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">
                                <TextView
                                    android:id="@+id/tvDetalleNivel"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/colorPrimary"
                                    android:text="@string/v_nivel"/>
                                <TextView
                                    android:id="@+id/tvDetalleObst"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/colorPrimary"
                                    android:text="@string/v_obstaculo"/>
                                <TextView
                                    android:id="@+id/tvNivel"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="6dp"/>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/colorPrimary"
                                    android:text="@string/v_direccion"/>
                                <TextView
                                    android:id="@+id/tvDireccion"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="6dp"
                                    android:drawableTint="@color/colorPrimary"/>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/colorPrimary"
                                    android:text="@string/v_urbanizacion"/>
                                <TextView
                                    android:id="@+id/tvUrbanizacion"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="6dp"/>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/colorPrimary"
                                    android:text="@string/v_terrirotio"/>
                                <TextView
                                    android:id="@+id/tvTerritorio"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="6dp"/>
                            </LinearLayout>


                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/llPie"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_margin="20dp">

                            <Button
                                android:id="@+id/btnConfirmar"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/button_style"
                                android:textColor="@color/white"
                                android:text="Confirmar"
                                android:layout_weight="1"
                                android:layout_marginEnd="10dp"
                                android:textStyle="bold"/>

                            <Button
                                android:id="@+id/btnRechazar"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/button_style"
                                android:textColor="@color/white"
                                android:text="Falso Positivo"
                                android:layout_weight="1"
                                android:layout_marginLeft="10dp"
                                android:textStyle="bold"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center">

                            <android.support.v7.widget.RecyclerView
                                android:id="@+id/rvMedia"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:listitem="@layout/item_directorio"
                                android:scrollbars="horizontal"
                                android:orientation="horizontal"/>

                        </LinearLayout>

                    </LinearLayout>
                </ScrollView>

            </LinearLayout>


        </RelativeLayout>


    </android.support.v7.widget.LinearLayoutCompat>

</android.support.design.widget.CoordinatorLayout>
